@@ -24,8 +24,8 @@ class KidsRequest extends FormRequest
     public function rules()
     {
         return [
-            'first_name' => 'required|string',
-            'last_name' => 'string',
+            'first_name' => 'required|string|max:50',
+            'last_name' => 'string|nullable|max:100',
             'gender' => 'in:male,female,none',
             'is_birthdate_approximate' => 'required|in:unknown,approximate,exact',
             'birthdate' => 'date|nullable',
