@@ -24,8 +24,8 @@ class RelationshipsRequest extends FormRequest
     public function rules()
     {
         return [
-            'first_name' => 'required|string',
-            'last_name' => 'string|nullable',
+            'first_name' => 'required|string|max:50',
+            'last_name' => 'string|nullable|max:100',
             'gender' => 'in:male,female,none',
             'status' => 'in:active,past|nullable',
             'is_birthdate_approximate' => 'required|in:unknown,approximate,exact',
